--- a/client/dev/partials/projects/structure/logframe-list.html
+++ b/client/dev/partials/projects/structure/logframe-list.html
@@ -26,7 +26,8 @@
 			<td class="handle"><i class="fa fa-sort fa-fw"></i></td>
 			<td>
 				<a ui-sref="main.project.structure.logical_frame_edition({index: index})">
-					{{logicalFrame.name}}
+					<span ng-show="logicalFrame.name">{{logicalFrame.name|maxLength:50}}</span>
+					<span ng-hide="logicalFrame.name" translate="project.unnamed_logframe"></span>
 				</a>
 			</td>
 			<td>{{logicalFrame.goal}}</td>
