Fix: Bug in optional-number directive prevents settings baselines and targets

--- a/client/dev/partials/_forms/optional-number.html
+++ b/client/dev/partials/_forms/optional-number.html
@@ -5,7 +5,7 @@
 	</div>
 
 	<input type="number"
-		   ng-model="chosenValue"
+		   ng-model="container.chosenValue"
 		   ng-if="specifyValue"
 		   required
 		   class="form-control" />
