--- a/client/dev/partials/projects/input/collection-input-list.html
+++ b/client/dev/partials/projects/input/collection-input-list.html
@@ -4,7 +4,50 @@
 	<li class="active">{{form.name|maxLength:50}}</li>
 </ol>
 
-<style> td { text-align: center; } td a { display: block; width: 100%;}</style>
+<style>
+	
+	table {
+		table-layout: fixed;
+	}
+
+	#table1-container {
+		float: left;
+		width: 15%;
+	}
+
+	#table2-container {
+		overflow-x: auto;
+		width: 85%;
+	}
+
+	#table2 {
+		width: auto;
+		min-width: 100%;
+	}
+
+	.headerField {
+		min-width: 100px;
+		width: 100%;
+		height: 46px;
+		line-height: 46px;
+		overflow: hidden;
+		text-align: center;
+	}
+
+	.headerField div {
+		display: inline-block;
+		vertical-align: middle;
+		line-height: 14px;
+	}
+
+	.bodyField { height: 20px; text-align: center; overflow: hidden; }
+	.bodyField a { display: block; width: 100%;}
+
+	.bodyField2 { height: 24px; text-align: center; overflow: hidden; }
+
+
+
+</style>
 
 <div class="alert alert-info" >
 
@@ -25,44 +68,68 @@
 
 <legend>{{form.name}}</legend>
 
-<table class="table table-bordered table-stripped table-condensed">
-	<thead>
-		<tr>
-			<th style="min-width: 140px" ng-style="{width: (100 / (columns.length + 1)) + '%'}" translate="shared.date"></th>
-			<th style="min-width: 140px" ng-style="{width: (100 / (columns.length + 1)) + '%'}"
-				ng-repeat="col in columns">
-				{{col.name|translate}}
-			</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr ng-repeat="(date, status) in inputsStatus">
-			<th title="{{date|formatSlotRange}}">{{date|formatSlot}}</th>
 
-			<td ng-repeat="col in columns">
-				<a class="btn btn-xs"
-				   ng-class="{'btn-default': status[col.id] === 'done', 'btn-primary': status[col.id] === 'expected', 'btn-danger': status[col.id] === 'outofschedule'}"
-				   ui-sref="main.project.input.edit({period: date, entityId: col.id})"
-				   ng-if="status[col.id]">
-					{{('project.input_status.' + status[col.id]) | translate}}
-				</a>
-			</td>
-		</tr>
 
-		<tr ng-hide="inputsStatus">
-			<td style="text-align: center" colspan="{{columns.length + 1}}" translate="project.no_inputs"></td>
-		</tr>
-	</tbody>
-	<tfoot ng-if="displayFooter">
-		<tr>
-			<th>
-				<utc-datepicker ng-model="newInputDate.date"></utc-datepicker>
-			</th>
+<div id="table1-container">
+	<table id="table1" class="table table-bordered table-stripped table-condensed">
+		<thead>
+			<tr>
+				<th><div class="headerField"><div translate="shared.date"></div></div></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="(date, status) in inputsStatus">
+				<td title="{{date|formatSlotRange}}"><div class="bodyField">{{date|formatSlot}}</div></td>
+			</tr>
+			<tr ng-hide="inputsStatus"><td></td></tr>
+		</tbody>
+		<tfoot ng-if="displayFooter">
+			<tr>
+				<th>
+					<div class="bodyField2">
+						<utc-datepicker ng-model="newInputDate.date"></utc-datepicker>
+					</div>
+				</th>
+			</tr>
+		</tfoot>
+	</table>
+</div>
 
-			<td ng-repeat="col in columns">
-				<a class="btn btn-xs btn-success" ng-click="addInput(col.id)" translate="project.input_status.expected-new"></a>
-			</td>
-		</tr>
-	</tfoot>
-</table>
+<div id="table2-container">
+	<table id="table2" class="table table-bordered table-stripped table-condensed">
+		<thead>
+			<tr>
+				<th ng-repeat="col in columns"><div class="headerField"><div>{{col.name|translate}}</div></div></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr ng-repeat="(date, status) in inputsStatus">
+				<td ng-repeat="col in columns">
+					<div class="bodyField">
+						<a class="btn btn-xs"
+						   ng-class="{'btn-default': status[col.id] === 'done', 'btn-primary': status[col.id] === 'expected', 'btn-danger': status[col.id] === 'outofschedule'}"
+						   ui-sref="main.project.input.edit({period: date, entityId: col.id})"
+						   ng-if="status[col.id]">
+							{{('project.input_status.' + status[col.id]) | translate}}
+						</a>
+					</div>
+				</td>
+			</tr>
 
+			<tr ng-hide="inputsStatus">
+				<td colspan="{{columns.length}}">
+					<div class="bodyField" translate="project.no_inputs"></div>
+				</td>
+			</tr>
+		</tbody>
+		<tfoot ng-if="displayFooter">
+			<tr>
+				<td ng-repeat="col in columns">
+					<div class="bodyField2">
+						<a class="btn btn-xs btn-success" ng-click="addInput(col.id)" translate="project.input_status.expected-new"></a>
+					</div>
+				</td>
+			</tr>
+		</tfoot>
+	</table>
+</div>
