Add: Support for semester periodicity

--- a/client/dev/partials/indicators/reporting.html
+++ b/client/dev/partials/indicators/reporting.html
@@ -56,6 +56,7 @@
 							<option value="week_mon" translate="shared.week_mon"></option>
 							<option value="month" translate="shared.month"></option>
 							<option value="quarter" translate="shared.quarter"></option>
+							<option value="semester" translate="shared.semester"></option>
 							<option value="year" translate="shared.year"></option>
 						</select>
 					</div>
