--- a/client/dev/partials/projects/structure/collection-form-edition.html
+++ b/client/dev/partials/projects/structure/collection-form-edition.html
@@ -73,6 +73,7 @@
 				<option value="week_mon" translate="project.periodicities.week_mon"></option>
 				<option value="month" translate="project.periodicities.month"></option>
 				<option value="quarter" translate="project.periodicities.quarter"></option>
+				<option value="semester" translate="project.periodicities.semester"></option>
 				<option value="year" translate="project.periodicities.year"></option>
 				<option value="free" translate="project.periodicities.free"></option>
 			</select>
