Add: Support for groups in selectors that contain sites.

--- a/client/dev/partials/_forms/partitions-filter.html
+++ b/client/dev/partials/_forms/partitions-filter.html
@@ -6,6 +6,6 @@
 		</div>
 	</div>
 	<div class="col-sm-10">
-		<partition-filter ng-model="filter[partition.id]" partition="partition"></partition-filter>
+		<element-filter ng-model="filter[partition.id]" elements="partition.elements" groups="partition.groups"></element-filter>
 	</div>
 </div>
