--- a/client/dev/partials/projects/reporting/olap.html
+++ b/client/dev/partials/projects/reporting/olap.html
@@ -91,7 +91,7 @@
 				<label for="{{dimension.id}}-input" class="col-sm-1 control-label">{{dimension.name|translate}}</label>
 				<div class="col-sm-11">
 					
-					<partition-filter ng-model="query.filters[dimension.id]" partition="dimension"></partition-filter>
+					<element-filter ng-model="query.filters[dimension.id]" elements="dimension.elements" groups="dimension.groups"></element-filter>
  				</div>
 			</div>
 			
