--- a/client/css/app.css
+++ b/client/css/app.css
@@ -635,3 +635,45 @@ ul[ng-sortable] li *, i.fa.fa-bars {
 .indicator-handle {
   cursor: pointer;
 }
+
+
+
+
+#input-list table {
+  table-layout: fixed;
+}
+  
+#input-list #table1-container {
+  float: left;
+  width: 15%;
+}
+
+#input-list #table2-container {
+  overflow-x: auto;
+  width: 85%;
+}
+
+#input-list #table2 {
+  width: auto;
+  min-width: 100%;
+}
+
+#input-list .headerField {
+  min-width: 100px;
+  width: 100%;
+  height: 46px;
+  line-height: 46px;
+  overflow: hidden;
+  text-align: center;
+}
+
+#input-list .headerField div {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 14px;
+}
+
+#input-list .bodyField { height: 20px; text-align: center; overflow: hidden; }
+#input-list .bodyField a { display: block; width: 100%;}
+
+#input-list .bodyField2 { height: 24px; text-align: center; overflow: hidden; }
