--- a/client/partials/projects/input/collection-input-list.html
+++ b/client/partials/projects/input/collection-input-list.html
@@ -4,51 +4,6 @@
 	<li class="active">{{form.name|maxLength:50}}</li>
 </ol>
 
-<style>
-	
-	table {
-		table-layout: fixed;
-	}
-
-	#table1-container {
-		float: left;
-		width: 15%;
-	}
-
-	#table2-container {
-		overflow-x: auto;
-		width: 85%;
-	}
-
-	#table2 {
-		width: auto;
-		min-width: 100%;
-	}
-
-	.headerField {
-		min-width: 100px;
-		width: 100%;
-		height: 46px;
-		line-height: 46px;
-		overflow: hidden;
-		text-align: center;
-	}
-
-	.headerField div {
-		display: inline-block;
-		vertical-align: middle;
-		line-height: 14px;
-	}
-
-	.bodyField { height: 20px; text-align: center; overflow: hidden; }
-	.bodyField a { display: block; width: 100%;}
-
-	.bodyField2 { height: 24px; text-align: center; overflow: hidden; }
-
-
-
-</style>
-
 <div class="alert alert-info" >
 
 	<div class="pull-right" style="text-align: right">
@@ -64,72 +19,73 @@
 	<span translate="project.input_list_info" translate-values="{name: form.name}"></span>
 </div>
 
-
-
 <legend>{{form.name}}</legend>
 
+<div id="input-list">
 
+	<div id="table1-container">
+		<table id="table1" class="table table-bordered table-stripped table-condensed">
+			<thead>
+				<tr>
+					<th><div class="headerField"><div translate="shared.date"></div></div></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="(date, status) in inputsStatus">
+					<td title="{{date|formatSlotRange}}"><div class="bodyField">{{date|formatSlot}}</div></td>
+				</tr>
+				<tr ng-show="inputsStatus|isEmpty">
+					<td><div class="bodyField">&nbsp;</div></td>
+				</tr>
+			</tbody>
+			<tfoot ng-if="displayFooter">
+				<tr>
+					<th>
+						<div class="bodyField2">
+							<utc-datepicker ng-model="newInputDate.date"></utc-datepicker>
+						</div>
+					</th>
+				</tr>
+			</tfoot>
+		</table>
+	</div>
 
-<div id="table1-container">
-	<table id="table1" class="table table-bordered table-stripped table-condensed">
-		<thead>
-			<tr>
-				<th><div class="headerField"><div translate="shared.date"></div></div></th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="(date, status) in inputsStatus">
-				<td title="{{date|formatSlotRange}}"><div class="bodyField">{{date|formatSlot}}</div></td>
-			</tr>
-			<tr ng-hide="inputsStatus"><td></td></tr>
-		</tbody>
-		<tfoot ng-if="displayFooter">
-			<tr>
-				<th>
-					<div class="bodyField2">
-						<utc-datepicker ng-model="newInputDate.date"></utc-datepicker>
-					</div>
-				</th>
-			</tr>
-		</tfoot>
-	</table>
-</div>
+	<div id="table2-container">
+		<table id="table2" class="table table-bordered table-stripped table-condensed">
+			<thead>
+				<tr>
+					<th ng-repeat="col in columns"><div class="headerField"><div>{{col.name|translate}}</div></div></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="(date, status) in inputsStatus">
+					<td ng-repeat="col in columns">
+						<div class="bodyField">
+							<a class="btn btn-xs"
+							   ng-class="{'btn-default': status[col.id] === 'done', 'btn-primary': status[col.id] === 'expected', 'btn-danger': status[col.id] === 'outofschedule'}"
+							   ui-sref="main.project.input.edit({period: date, entityId: col.id})"
+							   ng-if="status[col.id]">
+								{{('project.input_status.' + status[col.id]) | translate}}
+							</a>
+						</div>
+					</td>
+				</tr>
 
-<div id="table2-container">
-	<table id="table2" class="table table-bordered table-stripped table-condensed">
-		<thead>
-			<tr>
-				<th ng-repeat="col in columns"><div class="headerField"><div>{{col.name|translate}}</div></div></th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="(date, status) in inputsStatus">
-				<td ng-repeat="col in columns">
-					<div class="bodyField">
-						<a class="btn btn-xs"
-						   ng-class="{'btn-default': status[col.id] === 'done', 'btn-primary': status[col.id] === 'expected', 'btn-danger': status[col.id] === 'outofschedule'}"
-						   ui-sref="main.project.input.edit({period: date, entityId: col.id})"
-						   ng-if="status[col.id]">
-							{{('project.input_status.' + status[col.id]) | translate}}
-						</a>
-					</div>
-				</td>
-			</tr>
-
-			<tr ng-hide="inputsStatus">
-				<td colspan="{{columns.length}}">
-					<div class="bodyField" translate="project.no_inputs"></div>
-				</td>
-			</tr>
-		</tbody>
-		<tfoot ng-if="displayFooter">
-			<tr>
-				<td ng-repeat="col in columns">
-					<div class="bodyField2">
-						<a class="btn btn-xs btn-success" ng-click="addInput(col.id)" translate="project.input_status.expected-new"></a>
-					</div>
-				</td>
-			</tr>
-		</tfoot>
-	</table>
+				<tr ng-show="inputsStatus|isEmpty">
+					<td colspan="{{columns.length}}">
+						<div class="bodyField" translate="project.no_inputs"></div>
+					</td>
+				</tr>
+			</tbody>
+			<tfoot ng-if="displayFooter">
+				<tr>
+					<td ng-repeat="col in columns">
+						<div class="bodyField2">
+							<a class="btn btn-xs btn-success" ng-click="addInput(col.id)" translate="project.input_status.expected-new"></a>
+						</div>
+					</td>
+				</tr>
+			</tfoot>
+		</table>
+	</div>
 </div>
