--- a/client/partials/projects/structure/partition-modal.html
+++ b/client/partials/projects/structure/partition-modal.html
@@ -1,9 +1,16 @@
+<div class="modal-header">
+
+	<h3 class="modal-title">
+		<a ng-click="closeModal()" class="pull-right" style="cursor: pointer">
+			<i class="fa fa-times"></i>
+		</a>
+		<span translate="project.partition_edit"></span>
+	</h3>
+</div>
+
 <div class="modal-body">
 
 	<form class="form-horizontal" name="partitionForm">
-
-		<legend translate="project.partition_edit"></legend>
-
 		<div class="form-group">
 			<label for="input-partition-name" class="col-sm-2 control-label" translate="shared.name"></label>
 			<div class="col-sm-10">
