--- a/client/partials/projects/structure/user-modal.html
+++ b/client/partials/projects/structure/user-modal.html
@@ -1,6 +1,14 @@
+<div class="modal-header">
+	<h3 class="modal-title">
+		<a ng-click="cancel()" class="pull-right" style="cursor: pointer">
+			<i class="fa fa-times"></i>
+		</a>
+		<span translate="project.edit_user"></span>
+	</h3>
+</div>
+
 <div class="modal-body">
 	<form class="form-horizontal" role="form" name="userForm" novalidate autocomplete="off">
-		<legend translate="project.edit_user"></legend>
 
 		<div class="form-group">
 			<label for="type-input" class="col-sm-3 control-label" translate="project.user_type"></label>
@@ -122,10 +130,5 @@
 	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew">
 		<i class="fa fa-remove"></i>
 		<span translate="shared.delete"></span>
-	</button>
-
-	<button ng-click="cancel()" class="btn btn-default">
-		<i class="fa fa-undo"></i>
-		<span translate="shared.cancel"></span>
 	</button>
 </div>
