Fix: Translation project.collect => project.collection_site_list

--- a/client/partials/projects/structure/collection-form-edition.html
+++ b/client/partials/projects/structure/collection-form-edition.html
@@ -33,7 +33,7 @@
 	</div>
 
 	<div class="form-group">
-		<label for="collect-input" class="col-sm-2 control-label" translate="project.collect"></label>
+		<label for="collect-input" class="col-sm-2 control-label" translate="project.collection_site_list"></label>
 		<div class="col-sm-10">
 			<element-filter ng-model="editableProject.forms[currentFormIndex].entities" elements="editableProject.entities" groups="editableProject.groups"></element-filter>
 		</div>
