--- a/client/partials/projects/structure/collection-form-list.html
+++ b/client/partials/projects/structure/collection-form-list.html
@@ -17,7 +17,7 @@
 			<th translate="shared.start"></th>
 			<th translate="shared.end"></th>
 			<th translate="project.periodicity"></th>
-			<th translate="project.collect"></th>
+			<th translate="project.collection_site_list"></th>
 		</tr>
 	</thead>
 	<tbody ng-if="editableProject.forms.length == 0">
