Fixes #61, #62: Make save button always visible, and fix input validation.

--- a/client/partials/projects/structure/menu.html
+++ b/client/partials/projects/structure/menu.html
@@ -1,7 +1,24 @@
 <div>
-	<div ui-view></div>
+	<div id="formblock" ui-view></div>
 
-	<div class="noprint" style="margin-bottom: 20px">
+	<div id="saveblock" class="noprint">
+
+		<div class="pull-right">
+			<p class="text-danger" ng-if="formContainer.currentForm.$invalid">
+				<i class="fa fa-exclamation-triangle"></i>
+				<span translate="project.form_error"></span>
+			</p>
+
+			<p class="text-info" ng-if="!projectChanged">
+				<i class="fa fa-info-circle"></i>
+				<span translate="project.form_persisted"></span>
+			</p>
+
+			<p class="text-warning" ng-if="projectChanged && !formContainer.currentForm.$invalid">
+				<i class="fa fa-exclamation-triangle"></i>
+				<span translate="project.form_changed"></span>
+			</p>
+		</div>
 
 		<a ng-disabled="!projectSavable || projectSaveRunning" class="btn btn-primary" ng-click="save()">
 			<i class="fa fa-floppy-o" ng-if="!projectSaveRunning"></i>
@@ -14,23 +31,6 @@
 			<i class="fa fa-undo"></i>
 			<span translate="shared.remove_changes"></span>
 		</a>
-
-		<br/><br/>
-
-		<p class="text-danger" ng-if="formContainer.currentForm.$invalid">
-			<i class="fa fa-exclamation-triangle"></i>
-			<span translate="project.form_error"></span>
-		</p>
-
-		<p class="text-info" ng-if="!projectChanged">
-			<i class="fa fa-info-circle"></i>
-			<span translate="project.form_persisted"></span>
-		</p>
-
-		<p class="text-warning" ng-if="projectChanged && formContainer.currentForm.$valid">
-			<i class="fa fa-exclamation-triangle"></i>
-			<span translate="project.form_changed"></span>
-		</p>
 
 	</div>
 </div>
