--- a/client/partials/projects/structure/menu.html
+++ b/client/partials/projects/structure/menu.html
@@ -9,7 +9,7 @@
 				<span translate="project.form_error"></span>
 			</p>
 
-			<p class="text-info" ng-if="!projectChanged">
+			<p class="text-info" ng-if="!projectChanged && masterProject._rev">
 				<i class="fa fa-info-circle"></i>
 				<span translate="project.form_persisted"></span>
 			</p>
