--- a/client/partials/projects/structure/user-list.html
+++ b/client/partials/projects/structure/user-list.html
@@ -13,9 +13,9 @@
 		<tr>
 			<th style="width: 30px"></th>
 			<th translate="shared.name"></th>
-			<th translate="project.user_role"></th>
-			<th translate="project.collection_site_list"></th>
-			<th translate="project.collection_form_list"></th>
+			<th style="width: 100px" translate="project.user_role"></th>
+			<th style="width: 30%" translate="project.collection_site_list"></th>
+			<th style="width: 30%" translate="project.collection_form_list"></th>
 		</tr>
 	</thead>
 	<tbody ng-if="editableProject.users.length == 0">
@@ -34,12 +34,8 @@
 				</a>
 			</td>
 			<td>{{('project.user_roles.' + user.role)|translate}}</td>
-			<td>
-				{{user.entities|getObjects:masterProject.entities|pluck:'name'|translate_list|join:', '}}
-			</td>
-			<td>
-				{{user.dataSources|getObjects:masterProject.forms|pluck:'name'|translate_list|join:', '}}
-			</td>
+			<td>{{user.entities|getObjects:masterProject.entities|pluck:'name'|translate_list|join:', '}}</td>
+			<td>{{user.dataSources|getObjects:masterProject.forms|pluck:'name'|translate_list|join:', '}}</td>
 		</tr>
 	</tbody>
 	<tfoot>
