--- a/client/partials/projects/structure/edition-modal.html
+++ b/client/partials/projects/structure/edition-modal.html
@@ -76,11 +76,33 @@
 </div>
 
 <div class="modal-footer">
-	<button ng-click="save()" ng-disabled="planningForm.$invalid" class="btn btn-primary">
+	<div style="float: left">
+		<p class="text-danger" ng-if="planningForm.$invalid">
+			<i class="fa fa-exclamation-triangle"></i>
+			<span translate="project.form_error_short"></span>
+		</p>
+		
+		<p class="text-info" ng-if="isUnchanged() && !isNew">
+			<i class="fa fa-info-circle"></i>
+			<span translate="project.form_persisted_short"></span>
+		</p>
+
+		<p class="text-warning" ng-if="!isUnchanged() && !planningForm.$invalid">
+			<i class="fa fa-exclamation-triangle"></i>
+			<span translate="project.form_changed_short"></span>
+		</p>
+	</div>
+
+	<button ng-click="save()" ng-disabled="planningForm.$invalid || isUnchanged()" class="btn btn-primary">
 		<i class="fa fa-object-group"></i>
 		<span translate="shared.apply"></span>
 	</button>
 
+	<button ng-click="reset()" ng-disabled="isUnchanged()" class="btn btn-default">
+		<i class="fa fa-undo"></i>
+		<span translate="shared.remove_changes"></span>
+	</button>
+	
 	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew && !indicator">
 		<i class="fa fa-remove"></i>
 		<span translate="shared.delete"></span>
